--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@
 
 // Apply the java-library plugin to add support for Java Library
 apply plugin: 'java-library'
-
+apply plugin: 'jacoco'
 
 // Make sure we are using Java 8.
 if(JavaVersion.current() != JavaVersion.VERSION_1_8) 
@@ -33,6 +33,8 @@ repositories {
 dependencies {
     // Use JUnit test framework
     testImplementation 'junit:junit:4.12'
+    testImplementation 'org.mockito:mockito-core:3.+'
+
 
 	// Deprecated.  Use testImplementation.
 //    testCompile 'junit:junit:4.12'
